--- a/interface.kv
+++ b/interface.kv
@@ -41,6 +41,7 @@
 
         PinInput:
             id: pin_input
+            halign: 'center'
             hint_text: 'ПИН-КОД'
             on_text: root.set_pin(self.text)
             input_filter: 'int'
@@ -149,16 +150,18 @@
         Label:
             id: money_out_label
             text: '[color=#FF9966]Введите сумму выдачи[/color]'
+            markup: True
 
         TextInput:
+            halign: 'center'
             hint_text: 'money'
             on_text: root.set_money(self.text)
             input_filter: 'int'
 
         Button:
             text: 'продолжить'
-            on_press: root.money_out()
-            on_release: app.root.change_screen('check_choice_screen')
+            #on_press: root.money_out()
+            on_release: if root.money_out() == True: app.root.change_screen('check_choice_screen')
 
 
 
@@ -172,6 +175,7 @@
             markup: True
 
         TextInput:
+            halign: 'center'
             hint_text: 'money'
             on_text: root.set_money(self.text)
             input_filter: 'int'
@@ -192,16 +196,19 @@
             text: '[color=#FF9966]Введите номер и сумму[/color]'
 
         PhoneInput:
+            halign: 'center'
             id: number
             multiline:False
+            input_filter: 'int'
             text: '+375 '
 
 
         TextInput:
             id: money
+            halign: 'center'
             hint_text: 'сумма деняк'
             multiline:False
-            input_filter: 'int'
+#            input_filter: 'int'
 
         Button:
             text: 'Продолжить'
@@ -215,18 +222,22 @@
         orientation: 'vertical'
         TextInput:
             id: money
+            halign: 'center'
             multiline:False
             input_filter: 'int'
         Button:
             text: 'Продолжить'
             on_press: root.from_byn_to_usd()
             on_release: app.root.change_screen('check_screen')
+
+
 <USDtoBYN>
     money:money
     BoxLayout:
         orientation: 'vertical'
         TextInput:
             id: money
+            halign: 'center'
             multiline:False
             input_filter: 'int'
         Button:
