--- a/interface.kv
+++ b/interface.kv
@@ -3,25 +3,60 @@
     BoxLayout:
         orientation: "vertical"
         adaptive_size: True
+#        Label:
+#            iid: label
+#            text: '[color=#FF9977]Выберите карточку[/color]'
+#            markup: True
+#            font_size: 20
+#            size_hint: None, None
+#            height:250
+#            width:250
+#            pos_hint: {"center_x": .5}
+
+    GridLayout:
+        cols: 1
+        rows:4
+        padding: 250, 30, 250, 50
+        spacing: 20
+
         Label:
             id: label
-            text: '[color=#FF9977]Выберите карточку[/color]'
+            text: '[color=#3E769B]                   Для начала работы \n                   выберите карточку[/color]'
             markup: True
+            font_size: 30
+            size_hint: None, None
+            height:170
+            width:170
+            pos_hint: {"center_x": .5}
+
 
         Button:
             text: 'Alesya Rabushka'
+            background_color:'#74B0D8'
+            background_normal:''
+            size_hint: 1, 0.3
+            pos_hint: {"center_x": .5,"center_y":.5}
             on_press: root.choose_card(1)
             on_release: app.root.change_screen('pin_screen')
 
 
         Button:
             text: 'Alena Sklema'
+            background_color:'#74B0D8'
+            background_normal:''
+            size_hint: 1, 0.3
+            pos_hint: {"center_x": .5,"center_y":.5}
             on_press: root.choose_card(2)
             on_release: app.root.change_screen('pin_screen')
             on_release: app.root.change_screen('pin_screen')
 
         Button:
             text: 'Aleksey Smelov'
+            text: 'Aleksey Smelov'
+            background_color:'#74B0D8'
+            background_normal:''
+            size_hint: 1, 0.3
+            pos_hint: {"center_x": .5,"center_y":.5}
             on_press: root.choose_card(3)
             on_release: app.root.change_screen('pin_screen')
             on_release: app.root.change_screen('pin_screen')
@@ -33,21 +68,40 @@
     BoxLayout:
         orientation: "vertical"
         adaptive_size: True
+        canvas.before:
+            Color:
+                rgb: (1,1,1)
+            Rectangle:
+                pos: self.pos
+                size: self.size
+
+    GridLayout:
+        cols:1
+        rows:3
+        padding:300,200,300,200
+        spacing:30
 
         Label:
             id: pin_label
-            text: '[color=#FF9966]Введите пин-код[/color]'
+            font_size: 20
+            text: '[color=#3E769B]Введите пин-код[/color]'
             markup: True
 
         PinInput:
             id: pin_input
             halign: 'center'
             hint_text: 'ПИН-КОД'
+            size_hint:None,None
+            size:(200,30)
             on_text: root.set_pin(self.text)
             input_filter: 'int'
 
         Button:
             text: 'ВВОД'
+            size_hint:None,None
+            size:(200,50)
+            background_color:'#74B0D8'
+            background_normal:''
             on_press: if root.check_pin() == 1: root.change_screen('menu_screen')
             on_release: if root.not_correct == True: root.change_screen('warning_screen')
 #            on_press: if root.check_pin() == 1: app.root.change_screen('menu_screen')
@@ -60,33 +114,79 @@
     BoxLayout:
         orientation: "vertical"
         adaptive_size: True
+    GridLayout:
+        cols:1
+        padding:300,10,300,500
 
-
+        Label:
+            id: pin_label
+            font_size: 20
+            background_color:'#74B0D8'
+            background_normal:''
+            text: '[color=#3E769B]Выберите операцию[/color]'
+            markup: True
+    GridLayout:
+        cols:2
+        rows:4
+        padding:90,90,200,120
+        spacing:30
         Button:
-            text: 'balance'
+            text: 'Информация о \n      балансе'
+            background_color:'#74B0D8'
+            background_normal:''
+            size_hint:None,None
+            size:(300,100)
             on_press: app.root.change_screen('balance_screen')
 
         Button:
-            text: 'money out'
+            text: 'Снять наличные'
+            background_color:'#74B0D8'
+            background_normal:''
+            size_hint:None,None
+            size:(300,100)
             on_press: app.root.change_screen('money_out_choice_screen')
         Button:
-            text: 'money in'
+            text: 'Пополнить баланс'
+            background_color:'#74B0D8'
+            background_normal:''
+            size_hint:None,None
+            size:(300,100)
             on_press: app.root.change_screen('money_in_screen')
         Button:
-            text: 'change pin'
+            text: 'Изменить ПИН-КОД'
+            background_color:'#74B0D8'
+            background_normal:''
+            size_hint:None,None
+            size:(300,100)
             on_press: app.root.change_screen('pin_screen')
             on_release: root.pin_screen.set_change_pin()
         Button:
-            text: 'telephone payment'
+            text: 'Оплатить мобильную \n              связь'
+            background_color:'#74B0D8'
+            background_normal:''
+            size_hint:None,None
+            size:(300,100)
             on_press: app.root.change_screen('telephone_payment')
         Button:
-            text: 'transaction to USD'
+            text: 'Транзакция в $'
+            background_color:'#74B0D8'
+            background_normal:''
+            size_hint:None,None
+            size:(300,100)
             on_press: app.root.change_screen('byn_to_usd')
         Button:
-            text: 'transaction to BYN'
+            text: 'Транзакция в BYN'
+            background_color:'#74B0D8'
+            background_normal:''
+            size_hint:None,None
+            size:(300,100)
             on_press: app.root.change_screen('usd_to_byn')
         Button:
             text: 'Завершить сеанс'
+            background_color:'#74B0D8'
+            background_normal:''
+            size_hint:None,None
+            size:(300,100)
             on_press: app.root.change_screen('exit_screen')
 
 <MoneyOutChoiceScreen>
@@ -225,7 +325,7 @@
             halign: 'center'
             id: number
             multiline:False
-            input_filter: 'int'
+#            input_filter: 'int'
             text: '+375 '
 
 
