--- a/interface.kv
+++ b/interface.kv
@@ -744,7 +744,7 @@
         padding:400,280,400,400
         spacing:30
         Label:
-            text: '[color=#3E769B]Задерживаем карточку[/color]'
+            text: '[color=#3E769B]Чтобы вернуть карточку, обратитесь в ваш банк[/color]'
             markup: True
             font_size: 25
 
