--- a/interface.kv
+++ b/interface.kv
@@ -158,8 +158,8 @@
             background_normal:''
             size_hint:None,None
             size:(300,100)
-            on_press: app.root.change_screen('pin_screen')
-            on_release: root.pin_screen.set_change_pin()
+            on_release: app.root.change_screen('pin_screen')
+            on_press: root.pin_screen.set_change_pin()
         Button:
             text: 'Оплатить мобильную \n              связь'
             background_color:'#74B0D8'
